# movie_joyflix

./: .gitignore  .vercelignore  JoyFlix.dmg  README.md  app.js  index.html  package-lock.json  package.json  style.css  tsconfig.app.json  vercel.json  vite.config.ts
joyflix-android/android/app/src/main/: AndroidManifest.xml
joyflix-android/www/: app.js  index.html  style.css
joyflix-virtual-pad/: capacitor.config.json  package-lock.json  package.json
joyflix-virtual-pad/android/app/: build.gradle
joyflix-virtual-pad/android/app/src/main/java/com/joyflix/remote/: MainActivity.java
joyflix-virtual-pad/android/app/src/main/res/values/: strings.xml
joyflix-virtual-pad/www/: app.js  index.html  style.css
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ContentRows.tsx  DetailModal.tsx  GenreBar.tsx  Hero.tsx  LanguageGrid.tsx  LenisScroll.tsx  MediaCard.tsx  MediaRow.tsx  Navbar.tsx  PlayerOverlay.tsx  SearchAndGrid.tsx  SettingsAndOnboarding.tsx  Spinner.tsx
src/context/: AppContext.tsx
src/hooks/: useHorizontalScroll.ts  useMediaRowScroll.ts  useTmdbSwr.ts
src/lib/: constants.ts  scroll.ts  tmdb-api.ts  types.ts  utils.ts
src/providers/: SwrProvider.tsx
src/store/: settingsStore.ts
