[package]
name = "joyflix"
version = "0.1.0"
description = "JoyFlix – Watch Movies & TV Shows"
authors = []
edition = "2021"

[lib]
name = "joyflix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "joyflix"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-web-kit = { version = "0.3", features = ["WKWebView"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
